src/main/java/error/example/domain/exception/DomainException.java
package error.example.domain.exception;

public abstract class DomainException extends Exception {

    public DomainException(String message) {
        super(message);
    }
}
